--- a/src/main/resources/com/client/fxml/login.fxml
+++ b/src/main/resources/com/client/fxml/login.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane id="mainAppPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.LoginController">
+<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.LoginController">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -35,7 +35,7 @@
           <RowConstraints minHeight="10.0" percentHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane id="mainCenterPane" stylesheets="@../css/login.css" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane id="mainCenterPane" GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
@@ -49,14 +49,14 @@
                   <RowConstraints minHeight="10.0" percentHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label id="mainCenterLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" prefHeight="1280.0" prefWidth="3840.0" stylesheets="@../css/login.css" text="Logowanie" GridPane.columnSpan="3">
+                  <Label id="mainCenterLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" prefHeight="1280.0" prefWidth="3840.0" text="Logowanie" GridPane.columnSpan="3">
                      <font>
                         <Font size="40.0" />
                      </font>
                   </Label>
                   <VBox alignment="CENTER" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <children>
-                        <TextField fx:id="login" accessibleHelp="Wpisz swój login" prefHeight="32.0" promptText="Login" styleClass="textField" stylesheets="@../css/login.css">
+                        <TextField fx:id="login" accessibleHelp="Wpisz swój login" prefHeight="32.0" promptText="Login" styleClass="textField">
                            <cursor>
                               <Cursor fx:constant="TEXT" />
                            </cursor>
@@ -66,9 +66,6 @@
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
-                           <tooltip>
-                              <Tooltip text="Wpisz swój login" />
-                           </tooltip>
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -92,9 +89,6 @@
                                        <cursor>
                                           <Cursor fx:constant="TEXT" />
                                        </cursor>
-                                       <tooltip>
-                                          <Tooltip text="Wpisz swoje hasło" />
-                                       </tooltip>
                                        <font>
                                           <Font size="14.0" />
                                        </font>
@@ -114,7 +108,7 @@
                                           <Image url="@../img/eyeW.png" />
                                        </image>
                                     </ImageView>
-                                    <ToggleButton fx:id="showPasswordButton" focusTraversable="false" mnemonicParsing="false" onAction="#showPassword" prefHeight="32.0" prefWidth="32.0" style="-fx-view-order: 2;" styleClass="toggleButton" stylesheets="@../css/login.css" />
+                                    <ToggleButton fx:id="showPasswordButton" focusTraversable="false" mnemonicParsing="false" onAction="#showPassword" prefHeight="32.0" prefWidth="32.0" style="-fx-view-order: 2;" styleClass="toggleButton" />
                                  </children>
                                  <padding>
                                     <Insets left="15.0" right="15.0" />
@@ -136,7 +130,7 @@
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </VBox>
-                  <Label id="errorLabel" fx:id="errorLabel" alignment="CENTER" prefHeight="2160.0" prefWidth="3840.0" stylesheets="@../css/login.css" text="ErrorLabel" visible="false" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+                  <Label id="errorLabel" fx:id="errorLabel" alignment="CENTER" prefHeight="2160.0" prefWidth="3840.0" text="ErrorLabel" visible="false" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -175,13 +169,13 @@
                                     <Image url="@../img/tickNo.png" />
                                  </image>
                               </ImageView>
-                              <ToggleButton fx:id="autoLoginButton" focusTraversable="false" maxHeight="33.0" mnemonicParsing="false" onAction="#autoLogin" prefHeight="32.0" prefWidth="32.0" style="-fx-view-order: 2;" styleClass="toggleButton" stylesheets="@../css/login.css" />
+                              <ToggleButton fx:id="autoLoginButton" focusTraversable="false" maxHeight="33.0" mnemonicParsing="false" onAction="#autoLogin" prefHeight="32.0" prefWidth="32.0" style="-fx-view-order: 2;" styleClass="toggleButton" />
                            </children>
                            <padding>
                               <Insets left="15.0" right="15.0" />
                            </padding>
                            <HBox.margin>
-                              <Insets left="15.0" right="15.0" />
+                              <Insets left="10.0" right="15.0" />
                            </HBox.margin>
                            <cursor>
                               <Cursor fx:constant="HAND" />
@@ -192,7 +186,7 @@
                         <Insets bottom="17.0" left="10.0" />
                      </GridPane.margin>
                   </HBox>
-                  <Button id="loginButton" fx:id="loginButton" alignment="CENTER" centerShape="false" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" onAction="#login" prefHeight="50.0" prefWidth="200.0" scaleShape="false" stylesheets="@../css/login.css" text="Zaloguj" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.rowSpan="2147483647" GridPane.valignment="BOTTOM">
+                  <Button id="loginButton" fx:id="loginButton" alignment="CENTER" centerShape="false" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" onAction="#login" prefHeight="50.0" prefWidth="200.0" scaleShape="false" text="Zaloguj" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.rowSpan="2147483647" GridPane.valignment="BOTTOM">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -209,10 +203,33 @@
       </GridPane>
    </center>
    <top>
-      <Label id="mainTopLabel" fx:id="topLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxWidth="1.7976931348623157E308" prefHeight="94.0" stylesheets="@../css/login.css" text="Witaj w XYZ" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Label>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="-Infinity" minHeight="80.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label id="mainTopLabel" fx:id="topLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxWidth="1.7976931348623157E308" prefHeight="80.0" text="Witaj w XYZ">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Pane maxHeight="60.0" maxWidth="60.0" prefHeight="60.0" prefWidth="60.0" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+               <children>
+                  <Button id="exitButton" fx:id="exitButton" cancelButton="true" focusTraversable="false" maxHeight="60.0" maxWidth="60.0" mnemonicParsing="false" onAction="#exit" prefHeight="60.0" prefWidth="60.0" />
+                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/appExit.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+         </children>
+      </GridPane>
    </top>
 </BorderPane>
