--- a/src/main/resources/com/client/fxml/mainScene.fxml
+++ b/src/main/resources/com/client/fxml/mainScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/mainMenu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.MainMenuController">
+<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/mainMenu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.MainSceneController">
    <top>
       <GridPane id="topGridPane" minHeight="80.0" prefHeight="80.0" BorderPane.alignment="CENTER">
         <columnConstraints>
