--- a/src/main/resources/com/client/fxml/home.fxml
+++ b/src/main/resources/com/client/fxml/home.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/mainMenu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.MainSceneController">
+<BorderPane id="mainPane" fx:id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/mainMenu.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.HomeContoller">
    <top>
       <GridPane id="topGridPane" minHeight="80.0" prefHeight="80.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -102,17 +102,10 @@
          </children>
       </GridPane>
    </top>
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-   </center>
+    <center>
+        <Pane>
+            <fx:include source="homeSubPanes/subHome.fxml" fx:id="subHome"/>
+            <fx:include source="homeSubPanes/subRooms.fxml" fx:id="subRooms"/>
+        </Pane>
+    </center>
 </BorderPane>
