--- a/src/main/resources/com/client/fxml/login.fxml
+++ b/src/main/resources/com/client/fxml/login.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.LoginController">
+<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.LoginController">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -49,7 +49,7 @@
                   <RowConstraints minHeight="10.0" percentHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label id="mainCenterLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" prefHeight="1280.0" prefWidth="3840.0" text="Logowanie" GridPane.columnSpan="3">
+                  <Label id="mainCenterLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="1280.0" prefWidth="3840.0" text="Logowanie" GridPane.columnSpan="3">
                      <font>
                         <Font size="40.0" />
                      </font>
@@ -100,7 +100,15 @@
                                     <Insets left="10.0" />
                                  </HBox.margin>
                                  <children>
-                                    <ImageView fx:id="showPasswordImg" fitHeight="28.0" fitWidth="28.0" layoutX="2.0" layoutY="2.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-view-order: 1;">
+                                    <ImageView fx:id="showPasswordImgO" fitHeight="28.0" fitWidth="28.0" layoutX="2.0" layoutY="2.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-view-order: 1;" visible="false">
+                                       <viewport>
+                                          <Rectangle2D />
+                                       </viewport>
+                                       <image>
+                                          <Image url="@../img/eyeB.png" />
+                                       </image>
+                                    </ImageView>
+                                    <ImageView fx:id="showPasswordImgC" fitHeight="28.0" fitWidth="28.0" layoutX="2.0" layoutY="2.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-view-order: 1;">
                                        <viewport>
                                           <Rectangle2D />
                                        </viewport>
@@ -145,7 +153,7 @@
                   </Pane>
                   <HBox maxHeight="33.0" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
                      <children>
-                        <Label ellipsisString="Log. Auto." focusTraversable="false" prefHeight="33.0" styleClass="textField" text="Logowanie automatyczne">
+                        <Label ellipsisString="Log. Auto." prefHeight="33.0" styleClass="textField" text="Logowanie automatyczne">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -161,12 +169,20 @@
                         </Label>
                         <Pane maxHeight="32.0" maxWidth="32.0" prefHeight="32.0" prefWidth="32.0">
                            <children>
-                              <ImageView fx:id="autoLoginImg" fitHeight="20.0" fitWidth="20.0" layoutX="6.0" layoutY="6.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-view-order: 1;">
+                              <ImageView fx:id="autoLoginImgN" fitHeight="20.0" fitWidth="20.0" layoutX="6.0" layoutY="6.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-view-order: 1;">
                                  <viewport>
                                     <Rectangle2D />
                                  </viewport>
                                  <image>
                                     <Image url="@../img/tickNo.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="autoLoginImgY" fitHeight="20.0" fitWidth="20.0" layoutX="6.0" layoutY="6.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-view-order: 1;" visible="false">
+                                 <viewport>
+                                    <Rectangle2D />
+                                 </viewport>
+                                 <image>
+                                    <Image url="@../img/tickYes.png" />
                                  </image>
                               </ImageView>
                               <ToggleButton fx:id="autoLoginButton" focusTraversable="false" maxHeight="33.0" mnemonicParsing="false" onAction="#autoLogin" prefHeight="32.0" prefWidth="32.0" style="-fx-view-order: 2;" styleClass="toggleButton" />
@@ -211,7 +227,7 @@
           <RowConstraints maxHeight="-Infinity" minHeight="80.0" prefHeight="80.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label id="mainTopLabel" fx:id="topLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" maxWidth="1.7976931348623157E308" prefHeight="80.0" text="Witaj w XYZ">
+            <Label id="mainTopLabel" fx:id="topLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="80.0" text="Witaj w XYZ">
                <font>
                   <Font size="40.0" />
                </font>
