Added data table to subEmp, added sorting and filtering functionality to it, minor scene restructuring

--- a/src/main/resources/com/client/css/home.css
+++ b/src/main/resources/com/client/css/home.css
@@ -1,7 +1,7 @@
 #mainPane {
     -fx-background-color:  linear-gradient(to bottom, #fdfdfd, #c0c0c0);
 }
-#topGridPane {
+#topPane {
     -fx-background-color:   linear-gradient(to bottom, #707070, #505050);
     
 }
