--- a/src/main/resources/com/client/fxml/home.fxml
+++ b/src/main/resources/com/client/fxml/home.fxml
@@ -10,125 +10,133 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane id="mainPane" fx:id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeContoller">
-   <top>
-      <GridPane id="topGridPane" minHeight="80.0" prefHeight="80.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="70.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="70.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="190.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="190.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="80.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+<GridPane id="mainPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="190.0" prefWidth="190.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="190.0" prefWidth="190.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" prefWidth="200.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="80.0" prefWidth="80.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="80.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
+      <Pane id="topPane" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" />
+      <Pane maxHeight="60.0" maxWidth="60.0" minHeight="60.0" minWidth="60.0" prefHeight="60.0" prefWidth="60.0">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
          <children>
-            <Pane maxHeight="60.0" maxWidth="60.0" prefHeight="60.0" prefWidth="60.0">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-               <children>
-                  <MenuButton id="topMenu" focusTraversable="false" maxHeight="60.0" maxWidth="60.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0">
-                    <items>
-                        <RadioMenuItem mnemonicParsing="false" onAction="#fullscreen" text="Fullscreen">
-                           <accelerator>
-                              <KeyCodeCombination alt="UP" code="F11" control="ANY" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator></RadioMenuItem>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </MenuButton>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/menu.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Pane maxHeight="60.0" maxWidth="60.0" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-               <children>
-                  <Button fx:id="homeButton" focusTraversable="false" mnemonicParsing="false" onAction="#home" prefHeight="60.0" prefWidth="60.0" styleClass="topButton">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/home.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </Pane>
-            <Pane maxHeight="60.0" maxWidth="180.0" prefHeight="60.0" prefWidth="180.0" GridPane.columnIndex="2">
-               <children>
-                  <Button fx:id="roomsButton" focusTraversable="false" mnemonicParsing="false" onAction="#rooms" prefHeight="60.0" prefWidth="180.0" styleClass="topButton" text="pokoje i klasy">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" />
-               </children>
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Pane>
-            <Pane maxHeight="60.0" maxWidth="180.0" prefHeight="60.0" prefWidth="180.0" GridPane.columnIndex="3">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-               <children>
-                  <Button fx:id="empButton" focusTraversable="false" mnemonicParsing="false" onAction="#emp" prefHeight="60.0" prefWidth="180.0" styleClass="topButton" text="pracownicy">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </Pane>
-            <Label id="topLogoutLabel" fx:id="loggedInAs" alignment="CENTER" contentDisplay="CENTER" maxHeight="60.0" prefHeight="60.0" text="Zalogowano jako: &#10;xyz" textAlignment="CENTER" GridPane.columnIndex="5">
-               <padding>
-                  <Insets left="5.0" right="5.0" />
-               </padding>
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
-            <Pane maxHeight="60.0" maxWidth="60.0" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-               <children>
-                  <Button fx:id="logoutButton" cancelButton="true" focusTraversable="false" mnemonicParsing="false" onAction="#logout" prefHeight="60.0" prefWidth="60.0" styleClass="topButton">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="10.0" layoutY="10.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/logout.png" />
-                     </image>
-                  </ImageView>
-               </children>
-               <GridPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </GridPane.margin>
-            </Pane>
+            <MenuButton id="topMenu" focusTraversable="false" maxHeight="60.0" maxWidth="60.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0">
+               <items>
+                  <RadioMenuItem mnemonicParsing="false" onAction="#fullscreen" text="Fullscreen">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="F11" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator>
+                  </RadioMenuItem>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+                  <MenuItem mnemonicParsing="false" text="Action 2" />
+               </items>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </MenuButton>
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/menu.png" />
+               </image>
+            </ImageView>
          </children>
-      </GridPane>
-   </top>
-    <center>
-        <Pane>
+      </Pane>
+      <Pane maxHeight="60.0" maxWidth="60.0" minHeight="60.0" minWidth="60.0" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+         <children>
+            <Button fx:id="homeButton" focusTraversable="false" mnemonicParsing="false" onAction="#home" prefHeight="60.0" prefWidth="60.0" styleClass="topButton">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/home.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane maxHeight="60.0" maxWidth="180.0" minHeight="60.0" minWidth="180.0" prefHeight="60.0" prefWidth="180.0" GridPane.columnIndex="2">
+         <children>
+            <Button fx:id="roomsButton" focusTraversable="false" mnemonicParsing="false" onAction="#rooms" prefHeight="60.0" prefWidth="180.0" styleClass="topButton" text="pokoje i klasy">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" />
+         </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Pane>
+      <Pane maxHeight="60.0" maxWidth="180.0" minHeight="60.0" minWidth="180.0" prefHeight="60.0" prefWidth="180.0" GridPane.columnIndex="3">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+         <children>
+            <Button fx:id="empButton" focusTraversable="false" mnemonicParsing="false" onAction="#emp" prefHeight="60.0" prefWidth="180.0" styleClass="topButton" text="pracownicy">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </Pane>
+      <Label id="topLogoutLabel" fx:id="loggedInAs" alignment="CENTER" contentDisplay="CENTER" maxHeight="60.0" minHeight="60.0" minWidth="150.0" prefHeight="60.0" text="Zalogowano jako: &#10;xyz" textAlignment="CENTER" GridPane.columnIndex="5">
+         <padding>
+            <Insets left="5.0" right="5.0" />
+         </padding>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Pane maxHeight="60.0" maxWidth="60.0" minHeight="60.0" minWidth="60.0" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <children>
+            <Button fx:id="logoutButton" cancelButton="true" focusTraversable="false" mnemonicParsing="false" onAction="#logout" prefHeight="60.0" prefWidth="60.0" styleClass="topButton">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="10.0" layoutY="10.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/logout.png" />
+               </image>
+            </ImageView>
+         </children>
+         <GridPane.margin>
+            <Insets left="10.0" right="10.0" />
+         </GridPane.margin>
+      </Pane>
+      <GridPane minHeight="300.0" prefHeight="640.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
             <fx:include fx:id="subHome" source="homeSubPanes/subHome.fxml" />
             <fx:include fx:id="subRooms" source="homeSubPanes/subRooms.fxml" />
             <fx:include fx:id="subEmp" source="homeSubPanes/subEmp.fxml" />
-        </Pane>
-    </center>
-</BorderPane>
+         </children>
+      </GridPane>
+   </children>
+</GridPane>
