--- a/src/main/resources/com/client/fxml/home.fxml
+++ b/src/main/resources/com/client/fxml/home.fxml
@@ -76,12 +76,17 @@
       </Pane>
       <Pane maxHeight="60.0" maxWidth="180.0" minHeight="60.0" minWidth="180.0" prefHeight="60.0" prefWidth="180.0" GridPane.columnIndex="2">
          <children>
-            <Button fx:id="roomsButton" focusTraversable="false" mnemonicParsing="false" onAction="#rooms" prefHeight="60.0" prefWidth="180.0" styleClass="topButton" text="pokoje i klasy">
+            <Button fx:id="roomsButton" alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" onAction="#rooms" prefHeight="60.0" prefWidth="180.0" styleClass="topButton">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="10.0" layoutY="6.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/room.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="70.0" layoutY="15.0" maxHeight="-Infinity" minHeight="-Infinity" mouseTransparent="true" prefHeight="30.0" styleClass="topButtonLabel" text="Pokoje" />
          </children>
          <GridPane.margin>
             <Insets left="10.0" />
@@ -92,12 +97,16 @@
             <Insets left="10.0" />
          </GridPane.margin>
          <children>
-            <Button fx:id="empButton" focusTraversable="false" mnemonicParsing="false" onAction="#emp" prefHeight="60.0" prefWidth="180.0" styleClass="topButton" text="pracownicy">
+            <Button fx:id="empButton" alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" onAction="#emp" prefHeight="60.0" prefWidth="180.0" styleClass="topButton">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="10.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/emp.png" />
+               </image></ImageView>
+            <Label layoutX="70.0" layoutY="15.0" maxHeight="-Infinity" minHeight="-Infinity" mouseTransparent="true" prefHeight="30.0" styleClass="topButtonLabel" text="Pracownicy" />
          </children>
       </Pane>
       <Label id="topLogoutLabel" fx:id="loggedInAs" alignment="CENTER" contentDisplay="CENTER" maxHeight="60.0" minHeight="60.0" minWidth="150.0" prefHeight="60.0" text="Zalogowano jako: &#10;xyz" textAlignment="CENTER" GridPane.columnIndex="5">
