--- a/src/main/resources/com/client/fxml/homeSubPanes/subEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/subEmp.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
@@ -35,12 +39,29 @@
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <TextField fx:id="searchFilter" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="240.0" promptText="Filter" styleClass="textField" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label id="personLabel" fx:id="testLabel" text="XYZ" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label id="mainLabel" prefHeight="50.0" text="Pracownicy" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets top="10.0" />
          </GridPane.margin>
       </Label>
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="282.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <children>
+            <TextField fx:id="searchFilter" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="240.0" promptText="Filter" styleClass="textField" />
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+               <children>
+                  <Button id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" />
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/rubber.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </Pane>
+         </children>
+      </HBox>
    </children>
 </GridPane>
