--- a/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
@@ -39,7 +39,7 @@
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></TableView>
-      <Label id="personLabel" fx:id="testLabel" text="XYZ" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <Label id="personLabel" fx:id="testLabel" text="Wybierz osobę z listy" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label id="mainLabel" prefHeight="50.0" text="Pracownicy" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets top="10.0" />
