--- a/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
@@ -41,7 +41,7 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Label id="personLabel" fx:id="testLabel" text="Wybierz osobę z listy" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <Label id="personLabel" fx:id="heading" text="Wybierz osobę z listy" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Label id="mainLabel" prefHeight="50.0" text="Pracownicy" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets top="10.0" />
@@ -52,7 +52,7 @@
             <TextField fx:id="searchFilter" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="240.0" promptText="Filter" styleClass="textField" />
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
                <children>
-                  <Button id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" />
+                  <Button id="resetButton" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" />
                   <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../img/rubber.png" />
@@ -65,20 +65,7 @@
             </Pane>
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
                <children>
-                  <Button id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#newEmployee" prefHeight="32.0" prefWidth="32.0" />
-                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../img/addEmp.png" />
-                     </image>
-                  </ImageView>
-               </children>
-               <HBox.margin>
-                  <Insets left="30.0" />
-               </HBox.margin>
-            </Pane>
-            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
-               <children>
-                  <Button id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" />
+                  <Button id="resetButton" fx:id="delEmpButton" disable="true" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" />
                   <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../img/delEmp.png" />
@@ -86,7 +73,7 @@
                   </ImageView>
                </children>
                <HBox.margin>
-                  <Insets left="10.0" />
+                  <Insets left="20.0" />
                </HBox.margin>
             </Pane>
          </children>
