--- a/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
@@ -19,16 +19,23 @@
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="35.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
    <children>
       <Pane id="leftPane" mouseTransparent="true" GridPane.rowSpan="2147483647" />
-      <TableView fx:id="table" prefWidth="200.0" GridPane.rowIndex="2">
+      <TableView fx:id="table" prefWidth="200.0" GridPane.rowIndex="2" GridPane.rowSpan="2147483647">
          <columns>
             <TableColumn fx:id="firstNameColumn" onEditCommit="#editFirstName" prefWidth="75.0" text="Imie" />
             <TableColumn fx:id="lastNameColumn" onEditCommit="#editLastName" prefWidth="75.0" text="Nazwisko" />
@@ -52,7 +59,7 @@
             <TextField fx:id="searchFilter" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="240.0" promptText="Filter" styleClass="textField" />
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
                <children>
-                  <Button id="resetButton" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" />
+                  <Button focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
                   <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../img/rubber.png" />
@@ -65,7 +72,20 @@
             </Pane>
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
                <children>
-                  <Button id="resetButton" fx:id="delEmpButton" disable="true" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" />
+                  <Button fx:id="refreshButton" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#refresh" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="4.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/refresh.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Pane>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+               <children>
+                  <Button fx:id="delEmpButton" disable="true" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
                   <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../img/delEmp.png" />
@@ -78,5 +98,25 @@
             </Pane>
          </children>
       </HBox>
+      <Pane id="infoPane" mouseTransparent="true" style="-fx-view-order: 8;" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2" />
+      <Label fx:id="job" alignment="CENTER" contentDisplay="CENTER" minHeight="30.0" minWidth="32.0" prefWidth="200.0" styleClass="infoField" text="Tytuł" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Label fx:id="login" alignment="CENTER" focusTraversable="false" prefWidth="200.0" styleClass="infoField" text="Login" visible="false" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+      <Label fx:id="gender" alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Płeć" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Label fx:id="serialNumber" alignment="CENTER" focusTraversable="false" prefWidth="200.0" styleClass="infoField" text="PESEL" visible="false" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="48.0" prefWidth="48.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="2">
+         <children>
+            <Button fx:id="lockButton" disable="true" focusTraversable="false" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" onAction="#lock" prefHeight="48.0" prefWidth="48.0" styleClass="resetButton" />
+            <ImageView fx:id="padlockC" fitHeight="32.0" fitWidth="32.0" layoutX="8.0" layoutY="8.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../img/padlock.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="padlockO" fitHeight="32.0" fitWidth="32.0" layoutX="8.0" layoutY="8.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../img/padlockOpen.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </GridPane>
