--- a/src/main/resources/com/client/css/schedule.css
+++ b/src/main/resources/com/client/css/schedule.css
@@ -1,3 +1,89 @@
 #mainPane {
     -fx-background-color:  linear-gradient(to bottom, #fdfdfd, #c0c0c0);
 }
+#mainTopLabel {
+    /*-fx-background-color: #e3e3e1;
+    -fx-text-fill: #000000;
+    -fx-border-color: #3e3e3e;*/
+    
+    -fx-background-color:linear-gradient(to bottom, #707070, #505050);
+    -fx-text-fill: white;
+
+    -fx-font-family: 'Lato';
+    -fx-font-size: 40px;
+    
+}
+#exitButton {
+    -fx-background-color:  linear-gradient(to bottom, #fdfdfd, #c0c0c0);
+    -fx-background-radius: 8;
+    -fx-border-color: transparent;
+
+}
+#exitButton:hover {
+    -fx-background-color:  linear-gradient(to bottom, #c0c0c0, #fdfdfd);
+}
+#scheduleBackground {
+    -fx-background-color:  linear-gradient(to bottom, #e0e0e0, #b0b0b0);
+    -fx-background-radius: 10;
+}
+#dayBackground {
+    -fx-background-color:linear-gradient(to bottom, #a0a0a0, #757575);
+    -fx-background-radius: 10;
+}
+.dayLabel {
+    -fx-text-fill:white;
+    -fx-font-family: 'Lato';
+    -fx-font-size: 22px;
+}
+#addResLabel {
+    -fx-font-family: 'Lato';
+    -fx-font-size: 28px;
+    -fx-background-radius: 20;
+    -fx-text-fill:white;
+    -fx-background-color: linear-gradient(to bottom, #707070, #505050);
+}
+#acceptButton {
+    -fx-background-color: linear-gradient(to bottom, #707070, #505050);
+    -fx-background-radius: 20;
+    -fx-font-family: 'Lato';
+    -fx-font-size: 20px;
+    -fx-text-fill: white;
+    -fx-border-color: transparent;
+    -fx-border-width: 1;
+    -fx-border-radius: 18;
+}
+#acceptButton:hover {
+    -fx-background-color: linear-gradient(to bottom, #505050, #707070);
+    -fx-font-family: 'Lato';
+    -fx-font-size: 22px;
+}
+.field {
+    -fx-background-radius: 10;
+    -fx-border-color: #c6c6c6;
+    -fx-border-radius: 10;
+    -fx-font-family: 'Lato';
+    -fx-font-size: 14px;
+}
+.formLabel {
+    -fx-font-family: 'Lato';
+    -fx-font-size: 18px;
+}
+.table-view{
+    -fx-background-radius: 8px;
+}
+.table-column{
+    -fx-background-radius: 8px;
+}
+.column-header-background {
+-fx-background-radius: 8px;
+}
+
+.resetButton {
+    -fx-background-color:  linear-gradient(to bottom, #fdfdfd, #c0c0c0);
+    -fx-background-radius: 8;
+    -fx-border-color: transparent;
+
+}
+.resetButton:hover {
+    -fx-background-color:  linear-gradient(to bottom, #c0c0c0, #fdfdfd);
+}
