--- a/src/main/resources/com/client/fxml/schedule.fxml
+++ b/src/main/resources/com/client/fxml/schedule.fxml
@@ -1,11 +1,183 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/schedule.css"
-            xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.ScheduleController">
+
+<BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/schedule.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.ScheduleController">
+   <top>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="-Infinity" minHeight="80.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label id="mainTopLabel" fx:id="topLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" prefHeight="80.0" text="Szczegółowy plan dla *">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+               <children>
+                  <Button id="exitButton" fx:id="exitButton" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#exit" prefHeight="60.0" prefWidth="60.0" />
+                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/exitSchedule.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Pane>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.halignment="RIGHT">
+               <children>
+                  <Button id="exitButton" fx:id="addReservationButton" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#addReservation" prefHeight="60.0" prefWidth="60.0" />
+                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/addRes.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <GridPane.margin>
+                  <Insets right="80.0" />
+               </GridPane.margin>
+            </Pane>
+         </children>
+      </GridPane>
+   </top>
+   <center>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="4.0" prefWidth="100.0" />
+            <ColumnConstraints fx:id="col1" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints fx:id="col2" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints fx:id="col3" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints fx:id="col4" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints fx:id="col5" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints fx:id="col6" hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="4.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="80.0" vgrow="SOMETIMES" />
+          <RowConstraints percentHeight="8.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="17.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="17.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="17.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="17.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Pane id="scheduleBackground" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="6" />
+            <Pane id="dayBackground" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" />
+            <Label alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" prefHeight="300.0" prefWidth="300.0" styleClass="dayLabel" text="Wtorek" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Label alignment="CENTER" focusTraversable="false" prefHeight="300.0" prefWidth="300.0" styleClass="dayLabel" text="Środa" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label alignment="CENTER" focusTraversable="false" prefHeight="300.0" prefWidth="300.0" styleClass="dayLabel" text="Czwartek" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Label alignment="CENTER" focusTraversable="false" prefHeight="300.0" prefWidth="300.0" styleClass="dayLabel" text="Piątek" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Label alignment="CENTER" focusTraversable="false" prefHeight="300.0" prefWidth="300.0" styleClass="dayLabel" text="Poniedziałek" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Label fx:id="mon8" alignment="CENTER" prefHeight="300.0" prefWidth="300.0" text="-" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <contextMenu>
+                  <ContextMenu>
+                    <items>
+                      <MenuItem fx:id="cmMon8" mnemonicParsing="false" onAction="#cmMon8a" text="Usuń rezerwację" visible="false" />
+                    </items>
+                  </ContextMenu>
+               </contextMenu>
+            </Label>
+            <Label fx:id="tue8" alignment="CENTER" prefHeight="300.0" prefWidth="300.0" text="-" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <contextMenu>
+                  <ContextMenu>
+                     <items>
+                        <MenuItem fx:id="cmTue8" mnemonicParsing="false" onAction="#cmTue8a" text="Usuń rezerwację" visible="false" />
+                     </items>
+                  </ContextMenu>
+               </contextMenu>
+            </Label>
+            <Label fx:id="wed8" alignment="CENTER" prefHeight="300.0" prefWidth="300.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <contextMenu>
+                  <ContextMenu>
+                     <items>
+                        <MenuItem fx:id="cmWed8" mnemonicParsing="false" onAction="#cmWed8a" text="Dodaj rezerwację" visible="false" />
+                     </items>
+                  </ContextMenu>
+               </contextMenu>
+            </Label>
+            <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="3" GridPane.rowSpan="2">
+              <columns>
+                <TableColumn fx:id="roomIdColumn" editable="false" prefWidth="75.0" sortable="false" text="Numer" />
+                <TableColumn fx:id="roomLevelColumn" editable="false" prefWidth="75.0" sortable="false" text="Piętro" />
+                  <TableColumn fx:id="roomCapColumn" editable="false" prefWidth="75.0" sortable="false" text="Pojemność" />
+                  <TableColumn fx:id="roomTypeColumn" editable="false" maxWidth="300.0" prefWidth="217.0" sortable="false" text="Typ" />
+              </columns>
+               <GridPane.margin>
+                  <Insets left="60.0" right="10.0" />
+               </GridPane.margin>
+            </TableView>
+            <Label id="addResLabel" fx:id="addLabel" contentDisplay="CENTER" prefHeight="80.0" prefWidth="500.0" text="Dodaj rezerwację" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <padding>
+                  <Insets left="15.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets left="50.0" />
+               </GridPane.margin>
+            </Label>
+            <ChoiceBox fx:id="dayChoicebox" prefWidth="200.0" styleClass="field" GridPane.columnIndex="6" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets left="70.0" />
+               </GridPane.margin>
+            </ChoiceBox>
+            <ChoiceBox fx:id="hourChoicebox" prefWidth="200.0" styleClass="field" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets right="20.0" />
+               </GridPane.margin>
+            </ChoiceBox>
+            <Button id="acceptButton" fx:id="acceptButton" mnemonicParsing="false" onAction="#submitRes" prefHeight="50.0" prefWidth="160.0" text="Potwierdź" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets right="20.0" />
+               </GridPane.margin>
+            </Button>
+            <TextField fx:id="searchFilter" maxWidth="160.0" prefWidth="40.0" styleClass="field" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets right="53.0" />
+               </GridPane.margin>
+            </TextField>
+            <Label fx:id="errorLabel" styleClass="formLabel" text="Label" visible="false" GridPane.columnIndex="6" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
+            </Label>
+            <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="32.0" GridPane.columnIndex="6" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <children>
+                  <Button fx:id="resetButton" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
+                  <ImageView fx:id="resetImg" fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/rubber.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Pane>
+         </children>
+      </GridPane>
+   </center>
 </BorderPane>
